<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".presentation.splash.SplashFragment">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/auth_logo_content_description"
        android:src="@drawable/auth_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/auth_subtitle"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/splash_loading"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

</LinearLayout>
